--- a/challenge/static/styles.css
+++ b/challenge/static/styles.css
@@ -2,13 +2,17 @@ body {
     margin: 0;
 }
 
-h1 {
-    color: red;
+p {
+    text-align: center;
 }
 
 /* id */
 #top-form {
     background-color: aqua;
+}
+#title-subtitle {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 /* class */
@@ -17,6 +21,15 @@ h1 {
     padding-top: 40px;
     padding-bottom: 10px;
     margin: 0 auto;
+}
+
+.chart-table {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.alignCenterText {
+    text-align: center;
 }
 
 .btn {
