--- a/challenge/templates/index.html
+++ b/challenge/templates/index.html
@@ -34,7 +34,7 @@
     <!-- Tabela e Gráfico -->
     <div class="container row chart-table">
         <div class="col">
-            <table class="table table-bordered">
+            <table class="table table-bordered" id="tabela">
                 <thead>
                   <tr>
                     <th scope="col"></th>
@@ -78,13 +78,16 @@
               </table>
         </div>
         <div class="col">
-            <h1>Gráfico</h1>
+            <canvas id="chart"></canvas>
         </div>
     </div>
-
-    <!-- Bootstrap js -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- Chart.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" integrity="sha512-TW5s0IT/IppJtu76UbysrBH9Hy/5X41OTAbQuffZFU6lQ1rdcLHzpU5BzVvr/YFykoiMYZVWlr/PX1mDcfM9Qg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'grafico.js' %}"></script>
+
 </body>
 </html>
