--- a/challenge/templates/index.html
+++ b/challenge/templates/index.html
@@ -15,9 +15,9 @@
         <div class="container-fluid top-bar">
           <form method="POST" class="d-flex">
             {% csrf_token %}
-            <input class="form-control me-2" type="text" placeholder="First name" aria-label="First name" name="firstName">
-            <input class="form-control me-2" type="text" placeholder="Last name" aria-label="Last name" name="lastName">
-            <input class="form-control me-2" type="text" placeholder="Participation" aria-label="Participation" name="participation">
+            <input class="form-control me-2" type="text" placeholder="First name" aria-label="First name" name="firstName"/>
+            <input class="form-control me-2" type="text" placeholder="Last name" aria-label="Last name" name="lastName"/>
+            <input class="form-control me-2" type="text" placeholder="Participation" aria-label="Participation" name="participation"/>
             <button class="btn btn-outline-light" type="submit" value="submit">Send</button>
           </form>
         </div>
