--- a/challenge-Final-EJS/views/index.ejs
+++ b/challenge-Final-EJS/views/index.ejs
@@ -13,7 +13,7 @@
 
 <%- include("bootStrapScripts") -%>
 
-<%- include("chartJs") -%>
+<%- include("chartJsAndJQuery") -%>
 
 <%- include("plotChart") -%>
 
