--- a/challenge-Final-EJS/views/navbar.ejs
+++ b/challenge-Final-EJS/views/navbar.ejs
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-light" id="top-form">
-    <div class="container-fluid top-bar">
-      <form method="POST" class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="First name" aria-label="First name" name="firstName" required/>
-        <input class="form-control me-2" type="text" placeholder="Last name" aria-label="Last name" name="lastName" required/>
-        <input class="form-control me-2" type="number" step=any max=100 placeholder="Participation" aria-label="Participation" name="participation" required/>
-        <button class="btn btn-outline-light" type="submit" value="submit">Send</button>
-      </form>
-    </div>
-  </nav>
+<nav class="nav justify-content-center" id="top-form">
+  <div class="container-fluid top-bar">
+    <form method="POST" class="d-flex">
+      <input class="form-control me-2 nav-item inputs" type="text" placeholder="First name" aria-label="First name" name="firstName" required/>
+      <input class="form-control me-2 nav-item inputs" type="text" placeholder="Last name" aria-label="Last name" name="lastName" required/>
+      <input class="form-control me-2 nav-item inputs" type="number" step=any max=100 placeholder="Participation (only numbers)" aria-label="Participation" name="participation" required/>
+      <button class="btn btn-outline-light nav-item" type="submit" value="submit">Send</button>
+    </form>
+  </div>
+</nav>
