--- a/challenge-Final-EJS/views/table.ejs
+++ b/challenge-Final-EJS/views/table.ejs
@@ -9,6 +9,7 @@
           </tr>
         </thead>
         <tbody>
+            <!-- Adicionar dados de forma dinâmica -->
             <% informations.forEach((element, index) => { %>
                 <tr>
                     <th scope="row" class="alignCenterText"> <%= index + 1 %> </th>
