--- a/challenge-Final-EJS/views/plotChart.ejs
+++ b/challenge-Final-EJS/views/plotChart.ejs
@@ -3,7 +3,6 @@
     const informations = <%- JSON.stringify(informations); %>
     const initialNames = Array.from(informations, x => x.fname + ' ' + x.lname);
     const initialValues = Array.from(informations, x => x.participation);
-    //parseFloat => pra sair de percentual para float
 
     const backgroundColors = [
         '#2D97DE',
@@ -22,27 +21,27 @@
     ];
 
     const data = {
-        labels: initialNames,
+        labels: initialNames, // nomes
         datasets: [{
             label: 'Participation',
-            data: initialValues,
+            data: initialValues, // participação
             backgroundColor: backgroundColors,
             hoverOffset: 10 // Acentuação no hover de alguma parte do gráfico
         }]
     };
 
     const config = {
-        type: 'doughnut',
-        data: data,
+        type: 'doughnut', // tipo de gráfico
+        data: data, // dados inseridos
         options: {
-            layout: {
+            layout: { // alteração de design do gráfico
                 padding: {
                     bottom: 200,
                     left: 50
                 }
             },
             plugins: {
-                legend: {
+                legend: { // alteração de design dos nomes
                     position: 'right', // posicionar os labels na direita
                     labels: {
                         font: {
@@ -61,6 +60,7 @@
         }
     };
 
+    // Plot
     const myChart = new Chart(
         document.getElementById('chart'),
         config
