--- a/challenge-Final-EJS/views/titleSubtitle.ejs
+++ b/challenge-Final-EJS/views/titleSubtitle.ejs
@@ -1,4 +1,5 @@
 <div id="title-subtitle">
+    <!-- Text-muted (bootstrap) ==  pra a palavra ficar mais cinzenta -->
     <p class="h1 text-muted">DATA</p>
     <p class="font-weight-light">Lorem ipsum dolor sit, amet, consectetur adipiscing elit</p>
 </div>
